// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:checkbox 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkbox"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Checkbox
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxControl cxd-Form-control is-thin"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default first last"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    选项说明
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkbox with checked 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkbox"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Checkbox
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxControl cxd-Form-control is-thin"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default first last checked cxd-Checkbox--checkbox--default--checked"
              data-role="checkbox"
            >
              <input
                checked=""
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    选项说明
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkbox with optionType 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkbox"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Checkbox
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxControl cxd-Form-control is-thin"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--button first last checked cxd-Checkbox--checkbox--button--checked"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    去吃饭
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkbox"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  您吃了吗
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <span
                class="cxd-PlainField"
              >
                吃了
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
